# django-tutorial

./: .gitignore  .projections.json  manage.py  pyproject.toml  requirements.txt  shell.cmd
mysite/: settings.py  urls.py
polls/: admin.py  models.py  tests.py  urls.py  views.py
polls/migrations/: 0001_initial.py
